@@ -9,12 +9,16 @@ LINGUAS =
 CONTROL_GPE_LOGIN = control1
 
 PACKAGE_CPPFLAGS += $(STANDARD_CPPFLAGS)
-PACKAGE_CFLAGS += $(STANDARD_CFLAGS) $(GPECFLAGS)
+PACKAGE_CFLAGS += -Wall $(STANDARD_CFLAGS) $(GPECFLAGS)
 PACKAGE_LDFLAGS += $(STANDARD_LDFLAGS) $(GPELIBS)
 
 ifeq ($(CVSBUILD),yes)
 PACKAGE_CPPFLAGS += -I../gpe-ownerinfo
 PACKAGE_LDFLAGS_OWNERINFO += -L../gpe-ownerinfo
+endif
+
+ifeq ($(DEBUG),yes)
+PACKAGE_CPPFLAGS += -DDEBUG=1
 endif
 
 PACKAGE_LDFLAGS_OWNERINFO += -lgpe-ownerinfo
