@@ -1,5 +1,8 @@
 2005-08-04  Florian Boor <florian@kernelconcepts.de>
 
+    * gpe-login.c: Improve fallback solution to support more situations.
+                   Defind DEBUG only if not already defined.    
+    * Makefile: Add -Wall and a section to handle DEBUG.
     * gpe-login.c (locale_get_files): Introduce a fallback solution for 
                                       creating a locale list using locale.alias.
                   (locale_install_check): New function to guess if a locale is
